[project]
name = "heyaml"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Gruno",email = "humbedooh@apache.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-gnupg (>=0.5.5)",
    "ruamel-yaml (>=0.18.14,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
